[package]
name = "hardy"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
doctest = false

[[bin]]
name = "moves_generator"
path = "src/bin/moves_generator.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_derive = "1.0.214"
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
warp = "0.3.7"
